--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+
+    testImplementation("io.github.bonigarcia:webdrivermanager:5.1.0")
+    testImplementation 'org.slf4j:slf4j-simple:1.7.32'
 }
 
 test {
